feat: pr review
Signed-off-by: GALLLASMILAN <gallas.milan@gmail.com>

--- a/package.json
+++ b/package.json
@@ -147,13 +147,13 @@
     "lint:fix": "yarn eslint --fix",
     "format": "yarn prettier --check .",
     "format:fix": "yarn prettier --write .",
-    "test:unit": "BEE_FRAMEWORK_INSTRUMENTATION_METRICS_DISABLED=true vitest run src",
-    "test:unit:watch": "BEE_FRAMEWORK_INSTRUMENTATION_METRICS_DISABLED=true vitest run src",
-    "test:e2e": "BEE_FRAMEWORK_INSTRUMENTATION_METRICS_DISABLED=true vitest run tests/e2e",
-    "test:e2e:watch": "BEE_FRAMEWORK_INSTRUMENTATION_METRICS_DISABLED=true vitest watch tests/e2e",
+    "test:unit": "vitest run src",
+    "test:unit:watch": "vitest run src",
+    "test:e2e": "vitest run tests/e2e",
+    "test:e2e:watch": "vitest watch tests/e2e",
     "test:all": "yarn test:unit && yarn test:e2e && yarn test:examples",
-    "test:examples": "BEE_FRAMEWORK_INSTRUMENTATION_METRICS_DISABLED=true vitest --config ./examples/vitest.examples.config.ts run tests/examples",
-    "test:examples:watch": "BEE_FRAMEWORK_INSTRUMENTATION_METRICS_DISABLED=true vitest --config ./examples/vitest.examples.config.ts watch tests/examples",
+    "test:examples": "vitest --config ./examples/vitest.examples.config.ts run tests/examples",
+    "test:examples:watch": "vitest --config ./examples/vitest.examples.config.ts watch tests/examples",
     "prepare": "husky",
     "copyright": "./scripts/copyright.sh",
     "release": "release-it",
@@ -164,10 +164,7 @@
     "@ai-zen/node-fetch-event-source": "^2.1.4",
     "@connectrpc/connect": "^1.6.1",
     "@connectrpc/connect-node": "^1.6.1",
-    "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.54.2",
-    "@opentelemetry/resources": "^1.27.0",
-    "@opentelemetry/sdk-metrics": "^1.27.0",
     "@opentelemetry/sdk-node": "^0.54.2",
     "@opentelemetry/semantic-conventions": "^1.27.0",
     "@streamparser/json": "^0.0.21",
