feat(adapters): add validation checks for ACP and BeeAI Platform (#838)
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -65,6 +65,7 @@ duckduckgo = ["duckduckgo-search"]
 wikipedia = ["wikipedia-api"]
 mcp = ["mcp"]
 acp = ["acp-sdk", "uvicorn"]
+beeai-platform = ["acp-sdk", "uvicorn"]
 
 
 [tool.mypy]
