--- a/typescript/package.json
+++ b/typescript/package.json
@@ -219,9 +219,10 @@
     "@googleapis/customsearch": "^3.2.0",
     "@langchain/community": ">=0.2.28",
     "@langchain/core": ">=0.2.27",
-    "@modelcontextprotocol/sdk": "^1.0.4",
+    "@modelcontextprotocol/sdk": "^1.12.0",
     "@qdrant/js-client-rest": "^1.14.0",
     "@zilliz/milvus2-sdk-node": "^2.4.9",
+    "express": "^5.0.0",
     "ollama-ai-provider": "^1.2.0",
     "sequelize": "^6.37.3",
     "yaml": "^2.6.1"
@@ -269,6 +270,9 @@
     "@zilliz/milvus2-sdk-node": {
       "optional": true
     },
+    "express": {
+      "optional": true
+    },
     "ibm-cloud-sdk-core": {
       "optional": true
     },
@@ -297,7 +301,7 @@
     "@langchain/core": "0.3.42",
     "@langchain/langgraph": "0.2.55",
     "@langchain/ollama": "^0.2.0",
-    "@modelcontextprotocol/sdk": "^1.0.4",
+    "@modelcontextprotocol/sdk": "^1.12.0",
     "@qdrant/js-client-rest": "^1.14.0",
     "@release-it/conventional-changelog": "^8.0.2",
     "@rollup/plugin-commonjs": "^28.0.1",
@@ -306,6 +310,7 @@
     "@types/eslint": "^9.6.1",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
+    "@types/express": "^5.0.0",
     "@types/glob": "^8.1.0",
     "@types/js-yaml": "^4.0.9",
     "@types/mustache": "^4",
@@ -320,6 +325,7 @@
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "express": "^5.0.0",
     "glob": "^11.0.0",
     "ibm-cloud-sdk-core": "^5.3.2",
     "langchain": "0.3.19",
