docs: update pages, add deprecation warning (#863)
Ref: #861
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/docs-mintlify/package.json
+++ b/docs-mintlify/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "mintlify dev --port 3333",
+    "links:check": "lychee --verbose --include-fragments ./**/*.mdx --exclude-path=python --exclude-path=typescript",
     "snippets:embed": "yarn exec embedme --source-root=.. ./**/*.mdx",
     "snippets:check": "yarn exec embedme --source-root=.. ./**/*.mdx --verify",
-    "git:pre-commit": "yarn snippets:check && echo 'OK'"
+    "git:pre-commit": "yarn snippets:check && yarn links:check && echo 'OK'"
   },
   "keywords": [],
   "packageManager": "yarn@4.9.1",
