feat(agents): add experimental RequirementAgent (#852)
Ref: #846

Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/python/.gitignore
+++ b/python/.gitignore
@@ -167,3 +167,9 @@ cython_debug/
 
 # Local playground
 examples/playground
+
+# Evaluation
+.deepeval
+.deepeval-cache.json
+.deepeval_telemetry.txt
+eval/**/*.cache
