--- a/python/.env.example
+++ b/python/.env.example
@@ -83,3 +83,8 @@ BEEAI_LOG_LEVEL=INFO
 # AZURE_OPENAI_CHAT_MODEL=gpt-4o-mini
 # AZURE_OPENAI_API_HEADERS="secret-header=1234"
 
+# Evaluation (internal)
+EVAL_CACHE_DATASET=False
+EVAL_LOG_LLM_CALLS=False
+EVAL_DISPLAY_MODE=all
+EVAL_CHAT_MODEL_NAME="ollama:granite3.3:8b"
