--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -36,11 +36,12 @@ mcp = {version = "^1.2.0", optional = true}
 pydantic = "^2.10"
 pydantic-settings = "^2.9.0"
 requests = "^2.32"
-wikipedia-api = {version = "^0.8.1", optional = true}
 uvicorn = {version = "^0.34.2", optional = true}
+wikipedia-api = {version = "^0.8.1", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 commitizen = "^4.2.1"
+deepeval = "2.9.7"
 mypy = "^1.15.0"
 nbstripout = "^0.8.1"
 poethepoet = "^0.33.1"
@@ -50,6 +51,7 @@ pytest = "^8.3.4"
 pytest-asyncio = "^0.25.3"
 pytest-cov = "^6.0.0"
 pytest-xdist = "^3.6.1"
+rich = ">=13.6.0,<14.0.0"
 ruff = "^0.9.6"
 tox = "^4.20"
 types-aiofiles = "^24.1.0.20250326"
@@ -71,11 +73,15 @@ a2a = ["a2a-sdk", "uvicorn"]
 
 
 [tool.mypy]
-mypy_path = "$MYPY_CONFIG_FILE_DIR/beeai_framework"
+mypy_path = ["$MYPY_CONFIG_FILE_DIR/beeai_framework"]
 exclude = ["^build/$", "^examples/playground/"]
 check_untyped_defs = true
 plugins = ["pydantic.mypy"]
 strict = true
+
+[[tool.mypy.overrides]]
+module = ["deepeval.*", "deepeval"]
+implicit_reexport = true
 
 [tool.pydantic-mypy]
 init_forbid_extra = true
@@ -92,9 +98,7 @@ major_version_zero = true
 bump_message = "chore: python release $new_version"
 
 [tool.pytest.ini_options]
-addopts = "-v --cov --cov-report html"
 testpaths = ["tests", "beeai_framework"]
-python_files = ["test_*.py", "*_test.py"]
 markers = [
     "unit",
     "integration",
@@ -114,7 +118,7 @@ asyncio_mode = "strict"
 default_fixture_loop_scope = "function"
 
 [tool.coverage.run]
-omit = ["tests/*"]
+omit = ["tests/*", "eval/*"]
 
 [tool.coverage.report]
 exclude_lines = [
@@ -136,6 +140,12 @@ cmd = "poetry build"
 [tool.poe.tasks.commit]
 help = "Creates a commit"
 cmd = "cz commit -- --signoff"
+
+[tool.poe.tasks.eval]
+help = "Run evaluation"
+cwd = "."
+args = [{ name = "TARGET", positional = true, multiple = true, default="eval" }]
+shell = "deepeval test run ${TARGET}"
 
 [tool.poe.tasks.format]
 help = "Run all formating tools"
@@ -299,13 +309,14 @@ lint.select = [
     "ASYNC", # async
 ]
 force-exclude = true
-lint.ignore = ["ANN401", "B904"]
+lint.ignore = ["ANN401", "B904", "RUF001"]
 lint.fixable = ["ALL"]
 lint.unfixable = []
 line-length = 120
 
 [tool.ruff.lint.per-file-ignores]
 "*.ipynb" = ["E501"]
+"examples/**/*.py" = ["E501"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
