--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 .vscode
 .DS_Store
 
-/docs/typescript
-/docs/python
-/docs/README.md
+/docs-deprecated/typescript
+/docs-deprecated/python
+/docs-deprecated/README.md
