--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -18,8 +18,8 @@ documentation = "https://i-am-bee.github.io/beeai-framework/#/python/"
 
 [tool.poetry.dependencies]
 python = ">= 3.11,<4.0"
-acp-sdk = {version = "~0.10.1", optional = true}
 a2a-sdk = {version = "~0.2.4", optional = true}
+acp-sdk = {version = "~0.12.1", optional = true}
 aiofiles = "^24.1.0"
 boto3 = {version = "^1.37.5", optional = true}
 cachetools = "^5.5.2"
@@ -31,7 +31,7 @@ langchain-community = {version = "^0.3.19", optional = true}
 langchain-core = {version = "^0.3.41", optional = true}
 langchain-ollama={version = "^0.3.1", optional = true}
 langgraph = {version = "^0.3.27", optional = true}
-litellm = "^1.60.0"
+litellm = "1.69.3"
 mcp = {version = "^1.2.0", optional = true}
 pydantic = "^2.10"
 pydantic-settings = "^2.9.0"
