feat(adapters): add XAI (Grok) adapter with chat and embedding support
- Add XAI chat model adapter using Vercel AI SDK integration
- Add XAI embedding model adapter
- Add XAI client configuration with API key support
- Add XAI provider registration in backend constants
- Add comprehensive example with chat, streaming, and tool calling tests
- Support for grok-3-mini and other XAI models
- Environment variable configuration (XAI_API_KEY, XAI_CHAT_MODEL)

Signed-off-by: ioitiki <andymalkin@hotmail.com>

--- a/typescript/package.json
+++ b/typescript/package.json
@@ -173,6 +173,7 @@
     "git:pre-commit": "yarn copyright:check && yarn lint && yarn format && yarn ts:check && yarn run test:unit"
   },
   "dependencies": {
+    "@ai-sdk/xai": "^1.2.16",
     "@ai-zen/node-fetch-event-source": "^2.1.4",
     "@streamparser/json": "^0.0.22",
     "ai": "^4.3.16",
