chore: regenerate docs, update examples
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "mintlify dev --port 3333",
-    "links:check": "lychee --verbose --include-fragments ./**/*.mdx --exclude-path=python --exclude-path=typescript",
+    "links:check": "lychee --verbose ./**/*.mdx --exclude-path=python --exclude-path=typescript",
     "snippets:embed": "yarn exec embedme --source-root=.. ./**/*.mdx",
     "snippets:check": "yarn exec embedme --source-root=.. ./**/*.mdx --verify",
     "git:pre-commit": "yarn snippets:check && yarn links:check && echo 'OK'"
