ci: use external API for tests
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/.github/workflows/py_e2e_tests.yml
+++ b/.github/workflows/py_e2e_tests.yml
@@ -36,15 +36,8 @@ jobs:
         run: poetry install --no-interaction --all-extras
       - name: Build
         run: poetry build
-      - name: Install ollama
-        run: curl -fsSL https://ollama.com/install.sh | sh
-      - name: Run ollama
-        run: |
-          ollama serve &
-          ollama pull llama3.1
-          ollama pull granite3.3:8b
-      - name: Call ollama API
-        run: |
-          curl -d '{"model": "llama3.1:latest", "stream": false, "prompt":"Whatever I say, answer with Yes"}' http://localhost:11434/api/generate
-      - name: Run e2e Tests
+      - name: Run E2E Tests
         run: poetry run poe test --type e2e
+        env:
+          OLLAMA_API_BASE: ${{ secrets.OLLAMA_API_BASE }}
+          OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
