--- a/.github/workflows/py_e2e_tests.yml
+++ b/.github/workflows/py_e2e_tests.yml
@@ -37,9 +37,9 @@ jobs:
       - name: Build
         run: poetry build
       - name: Run E2E Tests
-        run: poetry run poe test --type e2e -- --ignore tests/examples/test_examples.py
+        run: poetry run poe test --type e2e --ignore tests/examples/test_examples.py
       - name: Run Examples
-        run: poetry run poe test --type e2e -- tests/examples/test_examples.py
+        run: poetry run poe test --type e2e --include tests/examples/test_examples.py
         env:
           OLLAMA_API_BASE: ${{ secrets.OLLAMA_API_BASE }}
           OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
