--- a/.github/workflows/py_e2e_tests.yml
+++ b/.github/workflows/py_e2e_tests.yml
@@ -26,8 +26,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Install poetry
+      - name: Install Poetry
         run: pipx install poetry==2.1.1
+      - name: Install Poe
+        run: pipx install poethepoet
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
