--- a/.github/workflows/py_main.yml
+++ b/.github/workflows/py_main.yml
@@ -24,8 +24,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Install poetry
-        run: pipx install poetry
+      - name: Install Poetry
+        run: pipx install poetry==2.1.1
+      - name: Install Poe
+        run: pipx install poethepoet
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -33,20 +35,20 @@ jobs:
       - name: Install dependencies
         run: poetry install --no-interaction --all-extras
       - name: Code Lint
-        run: poetry run poe lint
+        run: poe lint
       - name: Type check task with mypy
-        run: poetry run poe type-check -- -- --show-error-context --pretty
+        run: poe type-check -- --show-error-context --pretty
       - name: Code Format
-        run: poetry run poe format
+        run: poe format
       - name: Commits Lint
-        run: poetry run cz check --rev-range HEAD~1..HEAD
+        run: cz check --rev-range HEAD~1..HEAD
       - name: Build
         run: poetry build
       - name: Unit Tests
-        run: poetry run poe test --type unit
+        run: poe test --type unit
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
           go-version: "1.23"
       - name: Check Copyright Header
-        run: poetry run poe copyright --type check
+        run: poe copyright --type check
