fix: put back accidental changes
- Refactor .github/labeler.yml to streamline the changed-files syntax for Python, TypeScript, and documentation.
- Update the link in python/docs/integrations.md to point to the correct Agent2Agent documentation.

These changes enhance clarity and maintainability of the configuration and documentation.

Signed-off-by: ioitiki <andymalkin@hotmail.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,10 +1,8 @@
 python:
-  - changed-files:
-    - any-glob-to-any-file: 'python/**'
+  - 'python/**'
 
 typescript:
-  - changed-files:
-    - any-glob-to-any-file: 'typescript/**'
+  - 'typescript/**'
 
 documentation:
   - changed-files:
