--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -1,14 +1,15 @@
 name: Auto Label PRs
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+  - pull_request_target
 
 jobs:
-  label:
+  labeler:
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - name: Label PR based on file paths
-        uses: actions/labeler@v5
-        with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+    - uses: actions/labeler@v5
+      with:
+        sync-labels: true
