fix: update labeler configuration and remove unused embedding model
- Refactor .github/labeler.yml to enhance the changed-files syntax for Python and TypeScript.
- Delete the unused embedding.ts file from the TypeScript adapters.
- Improve formatting in examples.test.ts for better readability and maintainability.

These changes streamline the configuration and clean up the codebase by removing obsolete files.

Signed-off-by: ioitiki <andymalkin@hotmail.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,8 +1,10 @@
 python:
-  - 'python/**'
+  - changed-files:
+    - any-glob-to-any-file: 'python/**'
 
 typescript:
-  - 'typescript/**'
+  - changed-files:
+    - any-glob-to-any-file: 'typescript/**'
 
 documentation:
   - changed-files:
