chore: bump packages
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -18,13 +18,13 @@ documentation = "https://i-am-bee.github.io/beeai-framework/#/python/"
 
 [tool.poetry.dependencies]
 python = ">= 3.11,<4.0"
-a2a-sdk = {version = "~0.2.4", optional = true}
-acp-sdk = {version = "~1.0.0", optional = true}
+a2a-sdk = {version = "~0.2.10", optional = true}
+acp-sdk = {version = "^1.0.0", optional = true}
 aiofiles = "^24.1.0"
 boto3 = {version = "^1.37.5", optional = true}
 cachetools = "^5.5.2"
 chevron = "^0.14.0"
-duckduckgo-search = {version = "^8.0.4", optional = true}
+duckduckgo-search = {version = "^8.0.5", optional = true}
 fastapi = {version = "^0.115.0", optional = true }
 json-repair = "^0.39.0"
 jsonref = "^1.1.0"
