--- a/.github/workflows/py_e2e_tests.yml
+++ b/.github/workflows/py_e2e_tests.yml
@@ -44,6 +44,7 @@ jobs:
           OLLAMA_API_BASE: ${{ secrets.OLLAMA_API_BASE }}
           OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
           BEEAI_OPEN_METEO_TOOL_PROXY: ${{ secrets.PROXY }}
+          BEEAI_DDG_TOOL_PROXY: ${{ secrets.PROXY }}
       - name: Run Examples
         run: poe test --type e2e -- tests/examples/test_examples.py
         env:
