--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -4,7 +4,16 @@ description: 'Set up mise tools (Python, Node.js, ...) and install project depen
 runs:
   using: "composite"
   steps:
-    - uses: jdx/mise-action@5083fe46898c414b2475087cc79da59e7da859e8
+    - uses: actions/cache@v4
       with:
-        version: 2025.2.6
-
+        path: python/.venv
+        key: poetry-venv-v1-${{ runner.os }}-${{ hashFiles('python/poetry.lock') }}
+        restore-keys: poetry-venv-v1-${{ runner.os }}-
+    - uses: actions/cache@v4
+      with:
+        path: ~/.cache/yarn
+        key: yarn-cache-v1-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: yarn-cache-v1-${{ runner.os }}-
+    - uses: jdx/mise-action@5cb1df66ed5e1fb3c670ea0b62fd17a76979826a
+      with:
+        version: 2025.7.1
