--- a/.github/workflows/py_e2e_tests.yml
+++ b/.github/workflows/py_e2e_tests.yml
@@ -26,27 +26,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Install Poetry
-        run: pipx install poetry==2.1.1
-      - name: Install Poe
-        run: pipx install poethepoet
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: "poetry"
-      - name: Install dependencies
-        run: poetry install --no-interaction --all-extras
-      - name: Build
-        run: poetry build
-      - name: Run E2E Tests
-        run: poe test --type e2e -- --ignore tests/examples/test_examples.py
+      - uses: ./.github/actions/setup
         env:
-          OLLAMA_API_BASE: ${{ secrets.OLLAMA_API_BASE }}
-          OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
-          BEEAI_OPEN_METEO_TOOL_PROXY: ${{ secrets.PROXY }}
-          BEEAI_DDG_TOOL_PROXY: ${{ secrets.PROXY }}
-      - name: Run Examples
-        run: poe test --type e2e -- tests/examples/test_examples.py
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: mise python:test:e2e
         env:
           OLLAMA_API_BASE: ${{ secrets.OLLAMA_API_BASE }}
           OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
