--- a/.github/workflows/py_main.yml
+++ b/.github/workflows/py_main.yml
@@ -24,29 +24,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Install Poetry
-        run: pipx install poetry==2.1.1
-      - name: Install Poe
-        run: pipx install poethepoet
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: "poetry"
-      - name: Install dependencies
-        run: poetry install --no-interaction --all-extras
-      - name: Code Lint
-        run: poe lint
-      - name: Type check task with mypy
-        run: poe type-check -- --show-error-context --pretty
-      - name: Code Format
-        run: poe format
-      - name: Commits Lint
-        run: poetry run cz check --rev-range HEAD~1..HEAD
-      - name: Build
-        run: poetry build
-      - name: Unit Tests
-        run: poe test --type unit
-      - name: Setup Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: "1.23"
+      - uses: ./.github/actions/setup
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: mise common:check
+      - run: mise python:check
+      - run: mise python:build
+      - run: mise python:test:unit
