--- a/.github/workflows/ts_examples_tests.yml
+++ b/.github/workflows/ts_examples_tests.yml
@@ -24,23 +24,11 @@ jobs:
     timeout-minutes: 40
     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: [18.x]
-
     steps:
       - uses: actions/checkout@v4
-      - name: Enable Corepack
-        run: corepack enable
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "yarn"
-          cache-dependency-path: "typescript/yarn.lock"
-      - name: Install dependencies
-        run: yarn install --immutable
+      - uses: ./.github/actions/setup
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install ollama
         run: curl -fsSL https://ollama.com/install.sh | sh
       - name: Run ollama
@@ -62,4 +50,4 @@ jobs:
           # WATSONX_DEPLOYMENT_ID: ${{ secrets.WATSONX_DEPLOYMENT_ID }}
         shell: bash
         run: |
-          yarn test:examples
+          mise typescript:test:examples
