--- a/.github/workflows/ts_main.yml
+++ b/.github/workflows/ts_main.yml
@@ -15,10 +15,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-defaults:
-  run:
-    working-directory: typescript
-
 jobs:
   main:
     timeout-minutes: 20
@@ -28,27 +24,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Enable Corepack
-        run: corepack enable
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: "typescript/.nvmrc"
-          cache: "yarn"
-          cache-dependency-path: "typescript/yarn.lock"
-      - name: Setup Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.23
-      - name: Install dependencies
-        run: yarn install --immutable
-      - name: Code Lint
-        run: yarn lint
-      - name: Code Format
-        run: yarn format
-      - name: Commits Lint
-        run: yarn commitlint --verbose --from "${{ github.event.pull_request.base.sha || github.event.commits[0].id || github.event.before || github.sha }}" --to "${{ github.event.pull_request.head.sha || github.event.head_commit.id || github.sha }}"
-      - name: Build
-        run: yarn build
-      - name: Unit Tests
-        run: yarn test:unit
+      - uses: ./.github/actions/setup
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: mise common:check
+      - run: mise typescript:check
+      - run: mise typescript:build
+      - run: mise typescript:test:unit
