--- a/typescript/tasks.toml
+++ b/typescript/tasks.toml
@@ -49,7 +49,10 @@ outputs = { auto = true }
 ["typescript:check:commitlint"]
 depends = ["typescript:setup"]
 dir = "{{config_root}}/typescript"
-run = "(git branch --list main | grep main >/dev/null || git fetch origin main:main) && yarn commitlint --from $(git merge-base main HEAD) --to HEAD"
+run = """
+git rev-parse --verify main || git fetch origin main:main
+test $(git rev-parse HEAD) = $(git rev-parse main) || yarn commitlint --from $(git merge-base main HEAD) --to HEAD
+"""
 sources = ["../.git/HEAD"]
 outputs = { auto = true }
 
