ci: fix node version matrix (#913)
Signed-off-by: Jan Pokorný <JenomPokorny@gmail.com>

--- a/.github/workflows/ts_e2e_tests.yml
+++ b/.github/workflows/ts_e2e_tests.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [18, 20, 22]
 
     steps:
       - uses: actions/checkout@v4
@@ -32,8 +32,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: mise use nodejs@${{ matrix.node-version }}
-      - run: mise setup
-      - name: E2E Tests
+      - run: mise typescript:test:e2e
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_SEARCH_API_KEY }}
@@ -47,4 +46,3 @@ jobs:
           WATSONX_REGION: ${{ secrets.WATSONX_REGION }}
           # WATSONX_SPACE_ID: ${{ secrets.WATSONX_SPACE_ID }}
           # WATSONX_DEPLOYMENT_ID: ${{ secrets.WATSONX_DEPLOYMENT_ID }}
-        run: mise typescript:test:e2e
