ci: use supported `cp` command (#915)
Signed-off-by: Jan Pokorný <JenomPokorny@gmail.com>
Co-authored-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/python/tasks.toml
+++ b/python/tasks.toml
@@ -12,7 +12,7 @@ outputs = { auto = true }
 
 ["python:setup:env"]
 dir = "{{config_root}}/python"
-run = "cp -n .env.example .env || true"
+run = "test -f .env || cp .env.example .env"
 
 # check
 
