--- a/.github/workflows/py_e2e_tests.yml
+++ b/.github/workflows/py_e2e_tests.yml
@@ -34,4 +34,5 @@ jobs:
           OLLAMA_API_BASE: ${{ secrets.OLLAMA_API_BASE }}
           OLLAMA_API_KEY: ${{ secrets.OLLAMA_API_KEY }}
           BEEAI_OPEN_METEO_TOOL_PROXY: ${{ secrets.PROXY }}
-          BEEAI_DDG_TOOL_PROXY: ${{ secrets.PROXY }}
+          BEEAI_DDG_TOOL_PROXY: ${{ secrets.BEEAI_DDG_TOOL_PROXY }}
+          BEEAI_DDG_TOOL_PROXY_VERIFY: ${{ secrets.BEEAI_DDG_TOOL_PROXY_VERIFY }}
