ci: update release script
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/python/tasks.toml
+++ b/python/tasks.toml
@@ -107,6 +107,7 @@ outputs = { auto = true }
 # release
 
 ["python:release"]
+dir = "{{config_root}}/python"
 run = '''
 #!/bin/bash
 set -eu -o pipefail
