chore: fix dates in tests
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -167,7 +167,7 @@ lint.select = [
     "ASYNC", # async
 ]
 force-exclude = true
-lint.ignore = ["ANN401", "B904", "RUF001"]
+lint.ignore = ["ANN401", "B904", "RUF001", "DTZ002"]
 lint.fixable = ["ALL"]
 lint.unfixable = []
 line-length = 120
