chore: deprecated docs cleanup
Ref: #934
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/mise.toml
+++ b/mise.toml
@@ -105,7 +105,7 @@ depends = ["common:check:*"]
 
 [tasks."common:check:license"]
 dir = "{{config_root}}"
-run = "addlicense -check -l apache -s=only -c '© BeeAI a Series of LF Projects, LLC' $(fd --exclude examples '\\.(py|[jt]sx?|html|s?css)$' docs docs-deprecated python typescript)"
+run = "addlicense -check -l apache -s=only -c '© BeeAI a Series of LF Projects, LLC' $(fd --exclude examples '\\.(py|[jt]sx?|html|s?css)$' docs python typescript)"
 
 ### fix
 
@@ -114,7 +114,7 @@ depends = ["common:fix:*"]
 
 [tasks."common:fix:license"]
 dir = "{{config_root}}"
-run = "addlicense -l apache -s=only -c '© BeeAI a Series of LF Projects, LLC' $(fd --exclude examples '\\.(py|[jt]sx?|html|s?css)$' docs docs-deprecated python typescript)"
+run = "addlicense -l apache -s=only -c '© BeeAI a Series of LF Projects, LLC' $(fd --exclude examples '\\.(py|[jt]sx?|html|s?css)$' docs python typescript)"
 
 ### git hooks
 
