docs: remove lyche, update links
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/tasks.toml
+++ b/docs/tasks.toml
@@ -17,16 +17,7 @@ depends = ["docs:check:*"]
 ["docs:check:links"]
 depends = ["docs:setup"]
 dir = "{{config_root}}/docs"
-run = '''
-lychee \
-  --verbose \
-  --no-progress \
-  --exclude '(github)\.com' \
-  --max-concurrency 10 \
-  --max-retries 0 \
-  --exclude-path python \
-  './**/*.mdx'
-'''
+run = "yarn mintlify broken-links"
 sources = ["**/*.mdx"]
 outputs = { auto = true }
 
