--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -17,8 +17,8 @@ repository = "https://github.com/i-am-bee/beeai-framework"
 documentation = "https://i-am-bee.github.io/beeai-framework/#/python/"
 
 [tool.poetry.dependencies]
-python = ">= 3.11,<4.0"
-a2a-sdk = {version = "~0.2.11", optional = true}
+python = ">= 3.11,<3.14"
+a2a-sdk = {version = "=0.2.13", optional = true}
 acp-sdk = {version = "^1.0.0", optional = true}
 aiofiles = "^24.1.0"
 boto3 = {version = "^1.37.5", optional = true}
@@ -31,12 +31,14 @@ jsonref = "^1.1.0"
 langchain-community = {version = "^0.3.19", optional = true}
 langchain-core = {version = "^0.3.41", optional = true}
 langchain-ollama={version = "^0.3.1", optional = true}
-langgraph = {version = "^0.3.27", optional = true}
 litellm = "^1.69.3"
+llama-index = {version = "^0.12.42", optional = true}
+markdown = {version = "^3.8.2", optional = true}
 mcp = {version = "^1.10.1", optional = true}
 pydantic = "^2.10"
 pydantic-settings = "^2.9.0"
 requests = "^2.32"
+unstructured = {version = "^0.17.2", optional = true}
 uvicorn = {version = "^0.34.2", optional = true}
 wikipedia-api = {version = "^0.8.1", optional = true}
 
@@ -61,12 +63,12 @@ types-PyYAML = "^6.0.12.20250402"
 types-requests = "^2.32.0.20241016"
 
 [tool.poetry.extras]
-langchain = ["langchain-core", "langchain-community", "langgraph", "langchain-ollama"]
 huggingface = ["datasets", "transformers"]
 search = ["ddgs", "wikipedia-api"]
 duckduckgo = ["ddgs"]
 wikipedia = ["wikipedia-api"]
 mcp = ["mcp"]
+rag = ["llama-index", "langchain-core", "langchain-community", "langchain-ollama", "markdown", "unstructured"]
 acp = ["acp-sdk", "uvicorn"]
 beeai-platform = ["acp-sdk", "uvicorn"]
 a2a = ["a2a-sdk", "uvicorn"]
@@ -74,7 +76,6 @@ watsonx-orchestrate = ["uvicorn", "fastapi"]
 all = [
     "langchain-core",
     "langchain-community",
-    "langgraph",
     "langchain-ollama",
     "datasets",
     "transformers",
@@ -85,6 +86,7 @@ all = [
     "uvicorn",
     "a2a-sdk",
     "fastapi",
+    "llama-index"
 ]
 
 
