--- a/typescript/package.json
+++ b/typescript/package.json
@@ -255,8 +255,8 @@
     "@eslint/markdown": "^6.2.1",
     "@googleapis/customsearch": "^3.2.0",
     "@ibm-cloud/watsonx-ai": "^1.6.9",
-    "@langchain/community": "0.3.34",
-    "@langchain/core": "0.3.42",
+    "@langchain/community": "^0.3.49",
+    "@langchain/core": "^0.3.59",
     "@langchain/langgraph": "0.2.55",
     "@langchain/ollama": "^0.2.0",
     "@modelcontextprotocol/sdk": "^1.12.0",
