--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -7,7 +7,7 @@ authors = [{ name = "IBM Corp." }]
 maintainers = [
     { name = "Tomas Dvorak", email = "toomas2d@gmail.com" },
     { name = "Lukáš Janeček", email = "xjacka@gmail.com" },
-    { name = "Michael Desmond", email = "michael.desmond@gmail.com" }
+    { name = "Anton Puzanov", email = "antonp@il.ibm.com" }
 ]
 requires-python = ">=3.11,<4.0"
 
