--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -61,6 +61,7 @@ types-cachetools = "^5.5.0.20240820"
 types-chevron = "^0.14.2.20250103"
 types-PyYAML = "^6.0.12.20250402"
 types-requests = "^2.32.0.20241016"
+syrupy = "^4.9.1"
 
 [tool.poetry.extras]
 huggingface = ["datasets", "transformers"]
