--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -18,14 +18,14 @@ documentation = "https://i-am-bee.github.io/beeai-framework/#/python/"
 
 [tool.poetry.dependencies]
 python = ">= 3.11,<3.14"
-a2a-sdk = {version = "^0.2.16", optional = true}
+a2a-sdk = {version = "^0.3.2", optional = true, extras = ["telemetry"]}
 acp-sdk = {version = "^1.0.0", optional = true}
 aiofiles = "^24.1.0"
 boto3 = {version = "^1.37.5", optional = true}
 cachetools = "^5.5.2"
 chevron = "^0.14.0"
 ddgs = { version="^9.3.1", optional = true }
-fastapi = {version = "^0.115.0", optional = true }
+fastapi = {version = "^0.116.0", optional = true }
 json-repair = "^0.39.0"
 jsonref = "^1.1.0"
 langchain-community = {version = "^0.3.19", optional = true}
@@ -39,12 +39,14 @@ pydantic = "^2.10"
 pydantic-settings = "^2.9.0"
 requests = "^2.32"
 unstructured = {version = "^0.17.2", optional = true}
-uvicorn = {version = "^0.34.2", optional = true}
+uvicorn = {version = "^0.35.0", optional = true}
 wikipedia-api = {version = "^0.8.1", optional = true}
+beeai-sdk = {version = "0.3.0", optional = true}
+langgraph-prebuilt = {version = "^0.6.4", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 commitizen = "^4.2.1"
-deepeval = "2.9.7"
+deepeval = "3.3.5"
 mypy = "^1.17.0"
 nbstripout = "^0.8.1"
 pydantic-settings = "^2.7"
@@ -73,7 +75,7 @@ llama_index = ["llama-index"]
 langchain = ["langchain-core", "langchain-community", "langchain-ollama"]
 rag = ["llama-index", "langchain-core", "langchain-community", "langchain-ollama", "markdown", "unstructured"]
 acp = ["acp-sdk", "uvicorn"]
-beeai-platform = ["acp-sdk", "uvicorn"]
+beeai-platform = ["beeai-sdk", "a2a-sdk", "uvicorn"]
 a2a = ["a2a-sdk", "uvicorn"]
 watsonx-orchestrate = ["uvicorn", "fastapi"]
 all = [
@@ -89,7 +91,9 @@ all = [
     "uvicorn",
     "a2a-sdk",
     "fastapi",
-    "llama-index"
+    "llama-index",
+    "beeai-sdk",
+    "langgraph-prebuilt"
 ]
 
 
