--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -41,7 +41,7 @@ requests = "^2.32"
 unstructured = {version = "^0.17.2", optional = true}
 uvicorn = {version = "^0.35.0", optional = true}
 wikipedia-api = {version = "^0.8.1", optional = true}
-beeai-sdk = {version = "0.3.0", optional = true}
+beeai-sdk = {version = "^0.3.2", optional = true}
 langgraph-prebuilt = {version = "^0.6.4", optional = true}
 
 [tool.poetry.group.dev.dependencies]
