--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -19,7 +19,7 @@ documentation = "https://i-am-bee.github.io/beeai-framework/#/python/"
 
 [tool.poetry.dependencies]
 python = ">= 3.11,<3.14"
-a2a-sdk = {version = "^0.3.2", optional = true, extras = ["telemetry"]}
+a2a-sdk = {version = "^0.3.4", optional = true, extras = ["telemetry", "grpc"]}
 acp-sdk = {version = "^1.0.3", optional = true}
 aiofiles = "^24.1.0"
 boto3 = {version = "^1.37.5", optional = true}
@@ -41,6 +41,8 @@ pydantic-settings = "^2.9.0"
 requests = "^2.32"
 unstructured = {version = "^0.17.2", optional = true}
 uvicorn = {version = "^0.35.0", optional = true}
+types-grpcio = {version = "1.0.0.20250703", optional = true}
+types-grpcio-reflection = {version = "1.0.0.20250506", optional = true}
 wikipedia-api = {version = "^0.8.1", optional = true}
 beeai-sdk = {version = "^0.3.2", optional = true}
 langgraph-prebuilt = {version = "^0.6.4", optional = true}
@@ -79,7 +81,7 @@ langchain = ["langchain-core", "langchain-community", "langchain-ollama"]
 rag = ["llama-index", "langchain-core", "langchain-community", "langchain-ollama", "markdown", "unstructured"]
 acp = ["acp-sdk", "uvicorn"]
 beeai-platform = ["beeai-sdk", "a2a-sdk", "uvicorn"]
-a2a = ["a2a-sdk", "uvicorn"]
+a2a = ["a2a-sdk", "uvicorn", "types-grpcio", "types-grpcio-reflection"]
 watsonx-orchestrate = ["uvicorn", "fastapi"]
 all = [
     "langchain-core",
