chore: mypy modules check update
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -109,7 +109,7 @@ plugins = ["pydantic.mypy"]
 strict = true
 
 [[tool.mypy.overrides]]
-module = ["deepeval.*", "deepeval"]
+module = ["deepeval.*", "deepeval", "llama_index.*"]
 implicit_reexport = true
 
 [tool.pydantic-mypy]
@@ -197,7 +197,3 @@ convention = "google"
 [tool.ruff.lint.flake8-tidy-imports]
 # Disallow all relative imports, "parents" | "all"
 ban-relative-imports = "all"
-
-[[tool.mypy.overrides]]
-module = "llama_index.*"
-ignore_missing_imports = true
