--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -109,7 +109,7 @@ plugins = ["pydantic.mypy"]
 strict = true
 
 [[tool.mypy.overrides]]
-module = ["deepeval.*", "deepeval", "llama_index.*"]
+module = ["deepeval.*", "deepeval", "llama_index", "llama_index.*"]
 implicit_reexport = true
 
 [tool.pydantic-mypy]
