--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -25,7 +25,7 @@ aiofiles = "^24.1.0"
 boto3 = {version = "^1.37.5", optional = true}
 cachetools = "^5.5.2"
 chevron = "^0.14.0"
-ddgs = { version="^9.3.1", optional = true }
+ddgs = { version="^9.6.0", optional = true }
 fastapi = {version = "^0.116.0", optional = true }
 google-auth = { version = ">=2.14,<3.0.0", optional = true }
 json-repair = "^0.39.0"
@@ -52,7 +52,7 @@ deprecated = "^1.2.18"
 [tool.poetry.group.dev.dependencies]
 commitizen = "^4.2.1"
 deepeval = "3.3.5"
-mypy = "^1.17.0"
+mypy = "^1.18.1"
 nbstripout = "^0.8.1"
 pydantic-settings = "^2.7"
 pylint = "^3.3.2"
@@ -114,7 +114,7 @@ plugins = ["pydantic.mypy"]
 strict = true
 
 [[tool.mypy.overrides]]
-module = ["deepeval.*", "deepeval", "llama_index", "llama_index.*"]
+module = ["deepeval.*", "deepeval", "llama-index", "llama-index.*", "llama_index", "llama_index.*"]
 implicit_reexport = true
 
 [tool.pydantic-mypy]
