--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -114,8 +114,12 @@ plugins = ["pydantic.mypy"]
 strict = true
 
 [[tool.mypy.overrides]]
-module = ["deepeval.*", "deepeval", "llama-index", "llama-index.*", "llama_index", "llama_index.*"]
+module = ["deepeval.*", "deepeval"]
 implicit_reexport = true
+
+[[tool.mypy.overrides]]
+module = ["llama-index", "llama-index.*", "llama_index", "llama_index.*"]
+ignore_errors = true
 
 [tool.pydantic-mypy]
 init_forbid_extra = true
