--- a/typescript/package.json
+++ b/typescript/package.json
@@ -166,6 +166,7 @@
     "zod-to-json-schema": "^3.24.6"
   },
   "peerDependencies": {
+    "@a2a-js/sdk": "^0.3.4",
     "@ai-sdk/amazon-bedrock": "^2.2.12",
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/azure": "^1.3.24",
@@ -186,6 +187,9 @@
     "yaml": "^2.6.1"
   },
   "peerDependenciesMeta": {
+    "@a2a-js/sdk": {
+      "optional": true
+    },
     "@ai-sdk/amazon-bedrock": {
       "optional": true
     },
@@ -242,6 +246,7 @@
     }
   },
   "devDependencies": {
+    "@a2a-js/sdk": "^0.3.4",
     "@ai-sdk/amazon-bedrock": "^2.2.12",
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/azure": "^1.3.24",
